crad yellow to red

--- a/style.css
+++ b/style.css
@@ -171,5 +171,5 @@ h2{
  .garelly-div{
      width:35%;
      min-height:500px;
-     background:blanchedalmond
+     background:rgb(134, 80, 0)
  }
